game assets like hero,, enemy and fuel added

--- a/RoadRunner/index.html
+++ b/RoadRunner/index.html
@@ -8,7 +8,7 @@
     <!-- CSS Section-->
     <link href="css/game.css" rel="stylesheet" />
 </head>
-<body onload="init();">
+<body onload="preload();">
     <!-- Canvas where the Game will Happen-->
     <canvas id="canvas" width="640" height="480"></canvas>
 
@@ -24,7 +24,13 @@
     <!-- GAME SCRIPTS-->
 
     <script src="Scripts/constants.js"></script>
-
+    <script src="Scripts/objects/gameobject.js"></script>
+    <script src="Scripts/objects/runningpath.js"></script>
+    <script src="Scripts/objects/hero.js"></script>
+    <script src="Scripts/objects/enemycar.js"></script>
+    <script src="Scripts/objects/fuel.js"></script>
+    <script src="Scripts/objects/label.js"></script>
+    <script src="Scripts/objects/button.js"></script>
     <script src="Scripts/game.js"></script>
 
 </body>
