Add Score Board Information

--- a/RoadRunner/index.html
+++ b/RoadRunner/index.html
@@ -29,6 +29,7 @@
     <script src="Scripts/objects/hero.js"></script>
     <script src="Scripts/objects/enemycar.js"></script>
     <script src="Scripts/objects/fuel.js"></script>
+    <script src="Scripts/objects/scoreboard.js"></script>
     <script src="Scripts/objects/label.js"></script>
     <script src="Scripts/objects/button.js"></script>
     <script src="Scripts/game.js"></script>
