menu, play and gameover states added

--- a/RoadRunner/index.html
+++ b/RoadRunner/index.html
@@ -29,9 +29,13 @@
     <script src="Scripts/objects/hero.js"></script>
     <script src="Scripts/objects/enemycar.js"></script>
     <script src="Scripts/objects/fuel.js"></script>
-    <script src="Scripts/objects/scoreboard.js"></script>
     <script src="Scripts/objects/label.js"></script>
     <script src="Scripts/objects/button.js"></script>
+    <script src="Scripts/objects/scoreboard.js"></script>
+
+    <script src="Scripts/states/gameover.js"></script>
+    <script src="Scripts/states/menu.js"></script>
+    <script src="Scripts/states/play.js"></script>
     <script src="Scripts/game.js"></script>
 
 </body>
